Fix colour, navigation, and spacing

--- a/css/main.css
+++ b/css/main.css
@@ -11,8 +11,11 @@ html {
 }
 
 a {
-  color: #568c36;
-  text-decoration: none;
+  color: #113c00;
+}
+
+.nav a:focus {
+  outline: 3px solid #000;
 }
 
 a:hover {
